<resources>
    <string name="app_name">Paperless</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Paperless</string>
    <string name="nav_header_subtitle">enovatesoftug.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh Page</string>
    <string name="like">Scan Bar/QR Code</string>
    <string name="camera">Open Camera</string>
    <string name="details">View Details</string>
    <string name="unlike">Attach New Document</string>
    <string name="backdrop_title">New Customers</string>
    <string name="backdrop_subtitle">List of New Customers</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Names</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? | Sign Up now.</string>
    <string name="btn_link_to_login">Already registred? | Login </string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Clients</string>
    <string name="name">Full Names</string>
    <string name="copy_right" translatable="false">Paperless © %1$d</string>
    <string name="search">Search</string>
</resources>
